<resources>
    <string name="app_name">신차로</string>
    <string name="notice">알림</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="not_register_device_msg">등록되지 않은 기기 입니다.\n관리자에게 문의하세요.</string>
    <string name="fail_to_server_connect_msg">서버와 통신에 실패하였습니다.\n네트워크 (LTE, wifi)를 확인 후 다시 시도하여 주세요.</string>
    <string name="connect_server_msg">loading...</string>
    <string name="error_network_connected">네트워크상의 문제로 연결이 되지 않았습니다.</string>
    <string name="server_accept_failed_connect_msg">서버에 연결할 수 없습니다.\n관리자에게 문의하세요.</string>
    <string name="server_connect_error">서버와 통신에 실패하였습니다.</string>
    <string name="fail_to_start_msg">어플리케이션 사용 설정에 실패하였습니다.\n관리자에게 문의하세요.</string>
    <string name="read_phone_state_fails_content_msg">어플리케이션 설정으로 이동하여 %s을(를) 허용하시겠습니까?\n허용하지 않으면 로그인할 수 없습니다.</string>
    <string name="read_phone_state_fails_msg">전화번호 읽기를 허용하지 않아 로그인할 수 없습니다.</string>
    <string name="access_fine_location_fails_content_msg">어플리케이션 설정으로 이동하여 위치정보 사용을 허용하시겠습니까?\n허용하지 않으면 점포 검색을 사용할 수 없습니다.</string>
    <string name="access_fine_location_fails_msg">위치정보 사용을 허용하지 않아 점포 검색을 사용할 수 없습니다.</string>
    <string name="camera_fails_content_msg">어플리케이션 설정으로 이동하여 카메라 사용을 허용하시겠습니까?\n허용하지 않으면 사진을 찍을 수 없습니다.</string>
    <string name="camera_fails_msg">카메라 사용을 허용하지 않아 사진을 찍을 수 없습니다.</string>
    <string name="read_write_fails_content_msg">어플리케이션 설정으로 이동하여 카메라 사용을 허용하시겠습니까?\n허용하지 않으면 사진을 찍을 수 없습니다.</string>
    <string name="read_write_fails_msg">카메라 사용을 허용하지 않아 사진을 찍을 수 없습니다.</string>
    <string name="new_update_file_install_msg">신규 버전으로 업데이트가 필요합니다.\n업데이트를 진행하시겠습니까?</string>
    <string name="splash_title">신차로</string>
    <string name="copy_right_msg">COPYRIGHT 2020, SINCHARO, MOBILE SOLUTION\nALL RIGHT RESERVED.</string>
    <string name="not_correct_your_info_msg">코드, 아이디, 비밀번호가 일치하지 않습니다.</string>
    <string name="not_register_user_msg">사전에 등록되지 않은 사용자 정보입니다.\n담당자에게 문의 바랍니다.</string>
    <string name="input_company_code_msg">코드를 입력하세요.</string>
    <string name="input_id_msg">전화번호를 입력하세요.</string>
    <string name="input_pwd_msg">비밀번호를 입력하세요.</string>
    <string name="input_auth_msg">문자 메세지로 전송된 코드를 입력해주세요.</string>
    <string name="hint_auth_title">코드 입력</string>
    <string name="error_auth_msg">입력하신 코드가 올바르지 않습니다.\n다시 입력해주세요.</string>
    <string name="input_recom_msg">추천인 코드를 등록하면 가입 즉시\n5천원 할인쿠폰이 지급돼요!</string>
    <string name="input_terms_msg">서비스 이용을 위해 약관에 동의해주세요.</string>
    <string name="input_company_name_msg">제조사를 선택하세요.</string>
    <string name="input_car_name_msg">모델명를 선택하세요.</string>
    <string name="input_car_number_msg">차량 번호를 입력하세요.</string>
    <string name="input_company_not_msg">제조사를 다시 입력하세요.</string>
    <string name="input_car_not_msg">모델명를 다시 입력하세요.</string>
    <string name="auto_login_save_msg">로그인 유지가 저장 되었습니다.</string>
    <string name="auto_login_clear_msg">로그인 유지가 해제 되었습니다.</string>
    <string name="success_login_msg">로그인 되었습니다.</string>
    <string name="password_search_msg">비밀번호를 잊으셨나요?</string>
    <string name="fail_Login_msg">로그인에 실패하였습니다.</string>
    <string name="title_activity_maps">Map</string>
    <string name="main_menu_1">출장스팀세차</string>
    <string name="main_menu_2">렌터카 준비중</string>
    <string name="main_menu_3">승차공유 준비중</string>
    <string name="main_menu_4">대리운전 준비중</string>
    <string name="main_menu_5">퀵・탁송 준비중</string>
    <string name="main_menu_6">차량공유 준비중</string>
    <string name="customer_point_desc">사용자 포인트 아이콘</string>
    <string name="customer_name_str">한중석님의 포인트</string>
    <string name="customer_point_str">32,870</string>
    <string name="customer_point_arrow_desc">사용자 포인트 화살표 아이콘</string>
    <string name="car_register_banner_title">지금 차량을 등록하세요!</string>
    <string name="car_register_banner_description">한번 등록으로 스팀세차 및 대리운전\n서비스를 바로 이용할 수 있어요!</string>
    <string name="car_register">등록하기&#160;&#160;</string>
    <string name="car_register_desc">차량등록 아이콘</string>
    <string name="title_activity_password_change">비밀번호 변경</string>
    <string name="desc_activity_password_change">변경하실 새 비밀번호를 입력해주세요.\n(영문+숫자 조합 8자리 이상)</string>
    <string name="desc_activity_password">비밀번호는 영문+숫자 조합 8자리\n이상으로 설정해주시기 바랍니다.</string>
    <string name="password_change_success">비밀번호 재설정이 완료되었습니다.\n로그인 해주시기 바랍니다.</string>
    <string name="actionbar_prev_icon_description">이전버튼</string>
    <string name="actionbar_next_icon_description">다음버튼</string>
    <string name="btn_confirm">확인</string>
    <string name="btn_next_text">다음</string>
    <string name="lock_description">Lock 아이콘</string>
    <string name="hint_phone_title">휴대폰 번호</string>
    <string name="login_text1">신차로, 처음이세요?</string>
    <string name="login_text2">모빌리티 수익공유 플랫폼</string>
    <string name="hint_password_title">비밀번호</string>
    <string name="member_login">로그인</string>
    <string name="member_join">회원가입</string>
    <string name="member_join_name">본인 실명</string>
    <string name="member_join_next">건너뛰기</string>
    <string name="member_join_recom">추천인 코드</string>
    <string name="hint_password1">비밀번호</string>
    <string name="hint_password2">비밀번호 확인</string>
    <string name="hint_new_password1">새 비밀번호</string>
    <string name="hint_new_password2">새 비밀번호 확인</string>
    <string name="title_profile_photo_change">프로필 사진 변경</string>
    <string name="title_profile">프로필</string>
    <string name="title_point_history">포인트 내역</string>
    <string name="friend_type_1_str">1촌</string>
    <string name="friend_type_2_str">2촌</string>
    <string name="friend_count_str">%d명</string>
    <string name="total_point_title_str">누적포인트</string>
    <string name="point_history_list_column_1">사용자 명</string>
    <string name="point_history_list_column_2">이용 서비스</string>
    <string name="point_history_list_column_3">적립일자</string>
    <string name="point_history_list_column_4">포인트</string>
    <string name="current_address_str">서울 송파구 석촌호수로 274</string>
    <string name="reserve_date_title_str">예약일자</string>
    <string name="reserve_dummy_date_str">9/15 (화)</string>
    <string name="map_next_button_str">이 위치로 부름</string>
    <string name="car_del_acceptBtn_str">위치 지정 완료</string>
    <string name="home_btn_desc_str">home button</string>
    <string name="current_icon_desc_str">current button</string>
    <string name="address_icon_desc_str">address icon</string>
    <string name="reserve_date_icon_desc_str">right arrow icon</string>
    <string name="address_search_hint">주소를 검색해 주세요</string>
    <string name="address_search_cancel_icon_desc">주소 검색어 삭제 아이콘</string>
    <string name="address_search_icon_desc">주소 검색 아이콘</string>
    <string name="address_search_dummy1">송파구청</string>
    <string name="address_search_dummy2">송파구 석촌동 729</string>
    <string name="agent_photo_desc">대리점주 사진</string>
    <string name="agent_name_dummy">김태현</string>
    <string name="branch_name_dummy">관악구 1호</string>
    <string name="wash_area_title">세차 가능 지역</string>
    <string name="wash_area_dummy">관악구</string>
    <string name="reservation_agent_dummy">관악구 1호점</string>
    <string name="reservation_date_dummy">9/15(화)</string>
    <string name="reservation_time_dummy"></string>
    <string name="car_info_title">차량 정보</string>
    <string name="register_car_not_exist">등록된 차량 없음</string>
    <string name="car_btn_str_register">등록하기</string>
    <string name="car_btn_str_modify">변경하기</string>
    <string name="car_name_str"></string>
    <string name="car_number_str"></string>
    <string name="wash_info_title">세차 장소</string>
    <string name="wash_indoor">실내</string>
    <string name="wash_outdoor">실외</string>
    <string name="option_service_title">부가 서비스 (선택)</string>
    <string name="option_info_desc">부가 서비스 설명</string>
    <string name="option_no_data_available">부가 서비스 준비중입니다.</string>
    <string name="payment_title">예약 정보 및 결제</string>
    <string name="branch_name_title">대리점</string>
    <string name="branch_name">관악구 1호점</string>
    <string name="wash_address_title">세차 장소</string>
    <string name="wash_address">송파구 석촌호수로 274 (지상)</string>
    <string name="reservation_time_title">예약 시간</string>
    <string name="reservation_time">9/15 (화) 14:00</string>
    <string name="amount_title">요금</string>
    <string name="discount_title">할인 수단</string>
    <string name="discount_coupon">쿠폰</string>
    <string name="coupon_register">등록하기</string>
    <string name="discount_point">포인트</string>
    <string name="amount_default">0원</string>
    <string name="total_point_use">전액사용</string>
    <string name="my_point">0원 보유</string>
    <string name="payment_type_title">결제 수단</string>
    <string name="payment_change">변경하기</string>
    <string name="payment_type">신용/체크카드</string>
    <string name="cancel_policy_title">취소정책</string>
    <string name="cancel_policy_btn">자세히</string>
    <string name="cancel_policy_desc">예약 후, 취소 시점에 따라 수수료가 부과될 수 있습니다. 세부 내용은 자세히 버튼을 눌러 확인해주시기 바랍니다.</string>
    <string name="payment_save_fail">예약이 완료되었으나 정보 저장에 실패하였습니다.\n고객센터 1899-4299로 문의 부탁 드립니다.</string>
    <string name="clause_title">예약 정보 확인 및 모든 약관에 동의합니다</string>
    <string name="clause_desc1">서비스 이용약관 (필수)</string>
    <string name="clause_desc2">개인정보 수집 및 이용동의 (필수)</string>
    <string name="clause_desc3">개인정보 제3자 제공 동의 (필수)</string>
    <string name="title_activity_active_area_settings">내 정보 관리</string>
    <string name="title_activity_active_area_add">내 정보 관리</string>
    <string name="title_activity_my_profile_settings">내 정보 관리</string>
    <string name="settings_recommender">추천인 관리</string>
    <string name="settings_notice">공지사항</string>
    <string name="settings_card">결제카드</string>
    <string name="settings_coupone">쿠폰</string>
    <string name="settings_manage">차량관리</string>
    <string name="settings_set">설정</string>
    <string name="title_branch_info">대리점 정보</string>
    <string name="title_activity_driver_license_info">운전면허증 정보</string>
    <string name="title_activity_push_and_version">알림 및 버전 정보</string>
    <string name="myinfo_detail_name_title">이름</string>
    <string name="myinfo_detail_mobile_title">휴대폰 번호</string>
    <string name="myinfo_detail_password_title">비밀번호</string>
    <string name="myinfo_detail_password_content">영문, 숫자 혼합 6자리 이상</string>
    <string name="myinfo_recom_title">추천인 관리</string>
    <string name="title_notice">공지사항</string>
    <string name="title_card">결재카드</string>
    <string name="title_card_register">카드등록</string>
    <string name="recommender_system_title">추천인 시스템</string>
    <string name="q1_str">Q. ‘1촌’이란 무엇인가요?</string>
    <string name="a1_str">내가 초대한(나를 추천인으로 등록한) 사용자를 의미합니다.</string>
    <string name="q2_str">Q. ‘2촌’이란 무엇인가요?</string>
    <string name="a2_str">내가 초대한 1촌 사용자가 초대한 다른 사용자를 의미합니다. 1촌이 늘어날수록 2촌은 기하급수적으로 늘어나겠죠!?</string>
    <string name="q3_str">Q. 추천인 제도는 무엇인가요?</string>
    <string name="a3_str">1촌 혹은 2촌 사용자가 서비스 이용할 때 마다, 이용 요금의 일정 금액을 포인트로 페이백 받을 수 있는 제도입니다.</string>
    <string name="q4_str">Q. 1촌과 2촌의 차이점은 무엇인가요?</string>
    <string name="a4_str">1촌 사용자와 2촌 사용자가 세차, 대리 등 서비스를 이용할 때 마다 포인트가 본인에게 적립되는건 동일하지만 1촌 사용자가 서비스 이용 시에 조금 더 높은 비율의 포인트가 적립됩니다.</string>
    <string name="q5_str">Q.포인트는 어떻게 사용할 수 있나요?</string>
    <string name="a5_str">포인트는 10,000원 단위로 출금 신청할 수 있으며(향후 추가예정), 출금 뿐만 아니라 서비스 이용시 할인 수단으로도 사용 가능합니다.</string>
    <string name="q6_str">Q. ‘친구의 친구’란 무엇인가요?</string>
    <string name="a6_str">내가 초대한 친구가 초대한(친구를 추천인으로 등록한) 유저를 의미합니다. ‘초대한 친구’가 늘어날수록 ‘친구의 친구’는 기하급수적으로 늘어나겠죠??</string>
    <string name="q7_str">Q. 추천인 제도는 무엇인가요?</string>
    <string name="a7_str">‘내가 초대한 친구’ 혹은 ‘친구의 친구’가 서비스 이용할 때 마다, 이용 요금의 일정 금액을 포인트로 페이백 받을 수 있는 제도입니다.</string>
    <string name="q8_str">Q. ‘내가 초대한 친구’와 ‘친구의 친구’ 차이점은 무엇인가요?</string>
    <string name="a8_str">‘내가 초대한 친구’(A)와 ‘친구의 친구’(B)가 세차, 대리 등 서비스를 이용를 이용할 때 마다 일정 비율의 포인트가 본인에게 적립되는건 동일하지만 A 친구가 서비스 이용 시에 조금 더 높은 비율의 포인트가 적립됩니다.</string>
    <string name="q9_str">Q.포인트는 어떻게 사용할 수 있나요? </string>
    <string name="a9_str">포인트는 10,000원 단위로 출금 신청할 수 있으며, 출금 뿐만 아니라 서비스 이용시 할인 수단으로도 사용 가능합니다.</string>
</resources>