<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PointInfoActivity">

    <!-- ActionBar 영역 -->
    <include
        android:id="@+id/include"
        layout="@layout/actionbar_back_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="20dp"
                android:text="@string/recommender_system_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="40dp"
                android:text="@string/q1_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="16dp"
                android:text="@string/a1_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="28dp"
                android:text="@string/q2_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="16dp"
                android:text="@string/a2_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="28dp"
                android:text="@string/q3_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="16dp"
                android:text="@string/a3_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="28dp"
                android:text="@string/q4_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="16dp"
                android:text="@string/a4_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="28dp"
                android:text="@string/q5_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="16dp"
                android:text="@string/a5_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="28dp"
                android:text="@string/q6_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="16dp"
                android:text="@string/a6_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="28dp"
                android:text="@string/q7_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="16dp"
                android:text="@string/a7_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="28dp"
                android:text="@string/q8_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="16dp"
                android:text="@string/a8_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:layout_marginTop="28dp"
                android:text="@string/q9_str" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="52dp"
                android:text="@string/a9_str" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>