<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center|center_vertical|center_horizontal">

        <TextView
            android:id="@+id/column1"
            android:fontFamily="@font/nanumsquareregular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:gravity="center|center_vertical|center_horizontal"
            android:textColor="#3e3e3e"
            android:textSize="14sp"
            android:layout_weight="1"
            android:text="@string/point_history_list_column_1"/>
        <TextView
            android:id="@+id/column2"
            android:fontFamily="@font/nanumsquareregular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#3e3e3e"
            android:textSize="14sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/point_history_list_column_2"/>
        <TextView
            android:id="@+id/column3"
            android:fontFamily="@font/nanumsquareregular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#3e3e3e"
            android:textSize="14sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/point_history_list_column_3"/>
        <TextView
            android:id="@+id/column4"
            android:fontFamily="@font/nanumsquareregular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#3e3e3e"
            android:textSize="14sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/point_history_list_column_4"/>
    </LinearLayout>

    <View
        android:id="@+id/point_history_list_item_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333e3e3e" />

</LinearLayout>