<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    tools:context=".PointHistoryActivity">

    <!-- ActionBar : Back / Title / Info -->
    <ImageView
        android:id="@+id/btnPrev"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/actionbar_prev_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/prev_image_selector" />

    <TextView
        android:id="@+id/title_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_point_history"
        android:textColor="#3e3e3e"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/btnPrev"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/btnNext"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/actionbar_next_icon_description"
        app:layout_constraintStart_toEndOf="@+id/title_activity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/info" />
</androidx.constraintlayout.widget.ConstraintLayout>